ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-08-24 Benedikt Heintel
	- TOOLS:
		* Updated: PHPmyAdmin to 2.11.0
		* Updated: PHPSysInfo to 2.5.4

2007-08-24 Raphael Geissert
    - GUI:
        * Dropped the include/security code
    - CONFIGS:
        * Updated Ubuntu config files

2007-08-24 Benedikt Heintel
	- DOCU:
		* Separated VHCS and ispCP change logs
	- ENGINE:
		* Fixed security vulnerability: Restored files had owner:group root:root
	- GUI:
		* Fixed #545: Blank page on reseller statistics
		* Fixed #598: system-log.php not found
		* Fixed #599: Missing (B/KB/MB) on Server Traffic
		* Fixed #600: malfunction of cancel button when editing alias
		* Fixed #602: added favicon.ico
		* Fixed: sorting languages by name
	- TOOLS:
		* Moved translation converter tools into tools folder

2007-08-23 Raphael Geissert
    - GUI:
        * Fixed #592: Upload file error! message when installing a new language
        * Fixed #593: errors in transfer display
        * Fixed #577: Undefined index: gender in admin/add_reseller.php
        * Fixed #597: Error in the Menu under Admin->Language
        * Make use of php[4|5]-idn if available (faster than using pure PHP code)
        * Fixed #596: Undefined offset: 1 in gui/admin/multilanguage.php
        * Added missing gender field in reseller/edit_user.php
    - SETUP:
        * Missing alter table in vhcs2ispcp.sql for gender
    - ENGINE:
        * Fixed #587: error in restore-function
    - LANGUAGES:
        * Updated A=B files (and fixed online converter)

2007-08-22 Raphael Geissert
    - GUI: